--- a/class9/style.css
+++ b/class9/style.css
@@ -1,68 +1,101 @@
-.container {
-    margin-bottom: 100px;
-}
-
-.caro {
-    background: #fceae8;
-}
-
-.parvez {
-    width: 90%;
-    margin: auto;
-    padding: auto 40px;
-}
-
-.price {
-    color: #FF136F;
-}
-
-p {
-    font-size: 20px;
-}
-
-.carousel-btn {
-    background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
-    color: #fff;
-    border: none;
-    border-radius: 8px;
-    padding: 9px 25px;
-    cursor: pointer;
-}
-
-.watch {
-    background-color: #FF136F;
-    margin: 2px 10px;
-    border-radius: 15px;
-}
-
-.shoes {
-    background-color: yellowgreen;
-    margin: 2px 10px;
-    border-radius: 15px;
-}
-
-.cats {
-    padding: 20px 10px;
-    margin: 2px 2px;
-    background-color: whitesmoke;
-    box-shadow: 3px 3px 10px gray;
-    border-radius: 10px;
-}
-
-.btn {
-    padding: 10px 15px;
-    background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
-    margin: 10px 10px;
-    font-size: 18px;
-    color: whitesmoke;
-}
-
-.bag {
-    padding: 20px 10px;
-    justify-content: center;
-}
-
-.alada {
-    width: 80%;
-    height: 30%;
-}
+           .opore {
+               position: fixed;
+               margin-bottom: 100px;
+           }
+           
+           .container {
+               margin-bottom: 100px;
+           }
+           
+           .caro {
+               background: #fceae8;
+           }
+           
+           .parvez {
+               width: 90%;
+               margin: auto;
+               padding: auto 40px;
+           }
+           
+           .price {
+               color: #FF136F;
+           }
+           
+           p {
+               font-size: 20px;
+           }
+           
+           .carousel-btn {
+               background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
+               color: #fff;
+               border: none;
+               border-radius: 8px;
+               padding: 9px 25px;
+               cursor: pointer;
+           }
+           
+           .watch {
+               background-color: #FF136F;
+               margin: 2px 10px;
+               border-radius: 15px;
+           }
+           
+           .bag1 {
+               background-color: green;
+               margin: 2px 10px;
+               border-radius: 15px;
+           }
+           
+           .shoes {
+               background-color: yellowgreen;
+               margin: 2px 10px;
+               border-radius: 15px;
+           }
+           
+           .cats {
+               padding: 20px 10px;
+               margin: 2px 2px;
+               background-color: whitesmoke;
+               box-shadow: 3px 3px 10px gray;
+               border-radius: 10px;
+           }
+           
+           .btn {
+               padding: 10px 15px;
+               background-image: linear-gradient(to bottom, #FF589B 0%, #FF136F 100%);
+               margin: 10px 10px;
+               font-size: 18px;
+               color: whitesmoke;
+           }
+           
+           .bag {
+               padding: 20px 10px;
+               justify-content: center;
+           }
+           
+           .ami {
+               box-shadow: 5px 5px 10px gray;
+           }
+           
+           .alada {
+               width: 80%;
+               height: 30%;
+           }
+           
+           .last {
+               padding: .75rem 1.25rem;
+               background-color: white;
+               border-top: none;
+           }
+           
+           .footer-bg {
+               background-color: #fceae8;
+           }
+           
+           #subcribe {
+               height: 300px;
+           }
+           
+           #subcribe h5 {
+               color: gray;
+           }
